complete header section

--- a/index.html
+++ b/index.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="style.css">
     <title>Flower Shop</title>
 </head>
 <body>
     <header>
-
+        <div class="header">
+        <div class="header-container">
+            <h1 class="header-title">Let's make beautiful flowers a part of your life.</h1>
+            <p class="header-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <input class="btn-primary" type="button" placeholder="Shop Now" value="Shop Now">
+        </div>
+         <img class="header-img" src="Flower Asset/pngwing 10.png" alt="">
+        </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
