complete main > section-1 and section-2 and starting the section-3

--- a/index.html
+++ b/index.html
@@ -20,6 +20,41 @@
         </div>
     </header>
     <main>
+       <div class="section-1">
+         <h3 class="section-title">Our Featured Flowers</h3>
+         <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+       </div>
+       <div class="section-1-img">
+          <div class="img-1">
+            <img class="img-src" src="Flower Asset/pngwing 6.png" alt="">
+          </div>
+          <div class="img-2">
+            <img class="img-src" src="Flower Asset/pngwing 5.png" alt="">
+          </div>
+          <div class="img-3">
+            <img class="img-src" src="Flower Asset/pngwing 7.png" alt="">
+          </div>
+        </div>
+        
+        <div class="section-2">
+            <div class="section-2-container">
+                <h3 class="section-2-title">Hot Deal ! Sale Up To 25% Off</h3>
+                <p class="section-2-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+                <input class="btn-primary" type="button" placeholder="Shop Now" value="Sign Up">
+            </div>
+            <div class="section-2-img">
+                <img src="Flower Asset/pngwing 8.png" alt="">
+            </div>               
+        </div>
+
+        <div class="section-3">
+            <div class="section-3-container">
+                <h3 class="section-title">Instagram</h3>
+                <p class="section-description">It is a long established fact that a reader will be distracted by the readable<br>
+                 content of a page when looking at its layout.</p>
+            </div>
+        </div>
+
 
     </main>
     <footer>
