--- a/index.html
+++ b/index.html
@@ -51,9 +51,17 @@
             <div class="section-3-container">
                 <h3 class="section-title">Instagram</h3>
                 <p class="section-description">It is a long established fact that a reader will be distracted by the readable<br>
-                 content of a page when looking at its layout.</p>
+                content of a page when looking at its layout.</p>
+            </div>
+            <div class="section-3-img">
+                <img class="section-3-img-src" src="Flower Asset/Flower 01.png" alt="">
+                <img class="section-3-img-src" src="Flower Asset/Rectangle 4.png " alt="">
+                <img class="section-3-img-src" src="Flower Asset/Rectangle 5.png" alt="">
+                <img  class="section-3-img-src"src="Flower Asset/Rectangle 6.png" alt="">
             </div>
         </div>
+
+       
 
 
     </main>
