--- a/index.html
+++ b/index.html
@@ -61,8 +61,15 @@
             </div>
         </div>
 
-       
-
+        <div class="section-4">
+           <div class="section-4-container">
+             <h3 class="section-title">Get The Latest Deals</h3>
+             <p class="section-description">$30 coupon for first shopping</p>
+             <input type="email" placeholder="Enter your email here" id="">
+             <input class="btn-primary" type="button" placeholder="Subscribe" value="Subscribe">
+          </div>
+          
+        </div>
 
     </main>
     <footer>
