--- a/index.html
+++ b/index.html
@@ -93,14 +93,17 @@
                 <input class="section-4-email" type="email" placeholder="&nbsp;&nbsp;Enter your email here" id="">
                 <input class="btn-primary-1" type="button" placeholder="Subscribe" value="Subscribe">
               </div>
-             
           </div>
-            
         </div>
-
     </main>
     <footer>
-
+        <div class="footer">
+        <div class="footer-container">
+            <h3 class="section-title">Flower<span>Shop </span></h3>
+            <p class="section-description">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+            <p class="footer-p">@2020-2023, FlowerShop.com. All rights reserved.</p> 
+        </div>
+    </div>
     </footer>
 </body>
 </html>
